主应用路由页面使用子应用

--- a/部署.md
+++ b/部署.md
@@ -12,16 +12,16 @@ server {
 
         #access_log  logs/host.access.log  main;
         #主应用(基座配置)
-        location / {   
-            root   html;
+        location / {
+            root html;
             index  index.html index.htm;
 			try_files $uri $uri/ /index.html;
-             }
+        }
         #子应用配置
 		location /sub/sub-vue {
-			    alias html/subapp/sub-vue/;
-				index  index.html index.htm;
-		        try_files $uri $uri/ index.html;
-		    }
+		    root html;
+		    index  index.html index.htm;
+    try_files $uri $uri/ /sub/sub-vue/index.html;
+		}
 ```
 
